[package]
name = "ddgdriver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
url = "2.5.4"
urlencoding = "2.1.3"
webdriver = "0.51.0"
